--- a/cssSampleframe.css
+++ b/cssSampleframe.css
@@ -31,9 +31,9 @@
 
 
 #displayCase {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
 }
 
 .aCard {
@@ -60,11 +60,11 @@
 }
 
 .aCard:hover .frontBack{
-	transform: rotateY(180deg);
 	-ms-transform: rotateY(180deg);	
 	-moz-transform: rotateY(180deg);	
 	-webkit-transform: rotateY(180deg);
-	-o-transform: rotateY(180deg);	
+	-o-transform: rotateY(180deg);
+	transform: rotateY(180deg);
 }
 
 .cardFront {
@@ -84,8 +84,8 @@
 	color: darkblue;
 	text-align: center;
 	text-decoration: underline;
-	margin-top: 0px;
-	margin-bottom: 0px;
+	margin-top: 0;
+	margin-bottom: 0;
 	padding-top: 0.2rem;
 }
 
@@ -96,11 +96,11 @@
 	background: slategray;
 	-webkit-backface-visibility : hidden;	
 	backface-visibility : hidden;
-	transform: rotateY(180deg);
 	-ms-transform: rotateY(180deg);	
 	-moz-transform: rotateY(180deg);	
 	-webkit-transform: rotateY(180deg);
-	-o-transform: rotateY(180deg);	
+	-o-transform: rotateY(180deg);
+	transform: rotateY(180deg);	
 }
 
 .cardBack p {
