--- a/cssSampleframe.css
+++ b/cssSampleframe.css
@@ -1,4 +1,7 @@
 
+/* styling for the displaying of my work
+which includes the card flipping animation */
+
 #sampleFrame {
 	background-color: darkblue;
 	position: relative;
