--- a/cssChecklist.css
+++ b/cssChecklist.css
@@ -1,4 +1,7 @@
 
+/* styling for the list of suggestions
+and the animation that drives them */
+
 #checklist {
 	width: 100%;
 	margin: 4rem 0 3rem 0;
